src/test/resources/30/single/xhtml/valid/edupub-heading-img.xhtml
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE html>
<html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops">
	<head>
		<title>EDUPUB headings test</title>
	</head>
	<body>
		<h1>
			<img alt="some text" src="./img.png" />
		</h1>
		<section>
			<h2>
				<img alt="some text" src="./img.png" />
			</h2>
			<p>Lorem Ispum Dolor...</p>
		</section>
	</body>
</html>
