src/test/resources/30/single/xhtml/invalid/edupub-sectioning-implicit-body-aria-heading.xhtml
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE html>
<html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops">
    <head>
        <title>EDUPUB headings test</title>
    </head>
    <body aria-label="implied heading">
    	<!-- non-section element means topmost should be h1 -->
    	<p>Lorem Ipsum Dolor...</p>
    	<section>
    		<h3>Sub-sub-subsection</h3>
    		<p>Lorem Ispum Dolor...</p>
    	</section>
    </body>
</html>